[package]
name = "ayo"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["NalaDracip <nala.dracip@gmail.com>"]
description = "A minimal no-std GPIO HAL for embedded systems"
keywords = ["embedded", "gpio", "microcontroller", "no-std", "hal"]
categories = ["embedded", "device-drivers", "no-std"]